<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.m4s2016.sensalon.DetailsSalonActivityFragment"
    tools:showIn="@layout/activity_detailssalon">

    <ImageView
        android:id="@+id/salon_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_salon" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_column="0"
                android:text="@string/nom_salon"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/txtnomsalon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_column="0"
                android:text="@string/type_salon"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/txttypesalon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_column="0"
                android:text="@string/adresse"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/txtadresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_column="0"
                android:text="@string/telephone"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/txttelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_column="0"
                android:text="@string/proprietaire"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/txtproprietaire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_column="0"
                android:text="@string/street"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/txtstreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>
