<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.m4s2016.sensalon.DetailsModeleActivityFragment"
    tools:showIn="@layout/activity_details_modele">

    <ImageView
        android:id="@+id/modele_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_modele" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_column="0"
                android:text="@string/modelname"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/txtmodelname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_column="0"
                android:text="@string/model_price"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/txtmodelprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_column="0"
                android:text="@string/model_duration"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/txtmodelduration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_column="0"
                android:text="@string/salon_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/txtsalonname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
